# ASI-090925

./: CMakeLists.txt  README.md  copilot-for-developers-advanced.pptx.lnk  gendata-del.py  sync-repo.ps1
.github/: copilot-instructions.md
app/: main.cpp
specialized-topics-cpp/agentive-code-generation/: lambda.md
specialized-topics-cpp/analysis/: static-analysis.md
specialized-topics-cpp/code-coverage/: OrderProcessor.md
specialized-topics-cpp/copilot-code-generation.md/: copilot-instructions.md
specialized-topics-cpp/data-generation/: gendata-del.md  json-gen.md
specialized-topics-cpp/planning/: sdlc.md
specialized-topics-cpp/refactor/: combinatorics.cpp  combinatorics.md
specialized-topics-cpp/sql/: prompts.md
specialized-topics-cpp/testing/: tdd.md
